# old-teck

./: .gitignore  .ignore  CMakeLists.txt  README.md  compile_commands.json  web-build.bat
res/: r.txt
res/shaders/: mesh.wgsl  pbr.wgsl
src/: main.cpp  shell.html
src/components/: physics2d.h  shape2d.h  transform2d.h
src/core/: component.h  def.h  engine.cpp  engine.h  logger.cpp  logger.h  reader.cpp  reader.h  registry.cpp  registry.h  renderer.cpp  renderer.h  system.cpp  system.h  window.cpp  window.h
src/core/sys/: input.cpp  input.h
src/scenes/: scene.cpp  scene.h
src/systems/: input.cpp  input.h  sPhysics2d.h  sRender2d.cpp  sRender2d.h
