CMAKE_MINIMUM_REQUIRED(VERSION 3.26)

PROJECT(tech)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

FILE(COPY ${CMAKE_CURRENT_BINARY_DIR}/compile_commands.json DESTINATION ${CMAKE_CURRENT_SOURCE_DIR})

FILE(
  DOWNLOAD
  https://github.com/cpm-cmake/CPM.cmake/releases/download/v0.38.3/cpm.cmake
  ${CMAKE_CURRENT_BINARY_DIR}/cmake/CPM.cmake
  EXPECTED_HASH SHA256=cc155ce02e7945e7b8967ddfaff0b050e958a723ef7aad3766d368940cb15494
)
INCLUDE (${CMAKE_CURRENT_BINARY_DIR}/cmake/CPM.cmake)

FILE(GLOB_RECURSE SRC src/*.cpp)

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC})

FILE(GLOB EXT_INC ${CMAKE_CURRENT_BINARY_DIR}/_deps/*-src)
MESSAGE(${EXT_INC})
TARGET_INCLUDE_DIRECTORIES (${PROJECT_NAME} PUBLIC ${EXT_INC})

CPMAddPackage(
  NAME glm
  GITHUB_REPOSITORY g-truc/glm
  GIT_TAG 0.9.9.7
)

CPMAddPackage(
  NAME tiny_gltf
  GITHUB_REPOSITORY syoyo/tinygltf
  GIT_TAG v2.8.20
)

CPMAddPackage(
  NAME EnTT
  GITHUB_REPOSITORY skypjack/entt
  GIT_TAG v3.13.1
)
